sandbox/connector-bridge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connector-bridge
  annotations: 
    connectors.aiops.ibm.com/route-create-enabled: "true"
spec:
  selector:
    app: connector-bridge
  ports:
    - protocol: TCP
      port: 443
      name: https
      targetPort: 8443
