sandbox/connector-bridge/deployment/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: connector-bridge
spec:
  tls:
    termination: passthrough
  port:
    targetPort: grpc 
  to:
    kind: Service
    name: connector-bridge
